--- a/package.json
+++ b/package.json
@@ -6,33 +6,32 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint .",
+    "test": "jest"
   },
   "dependencies": {
-    "@react-native-firebase/app": "^23.8.6",
-    "@react-native-firebase/auth": "^23.8.6",
-    "@react-navigation/native": "^7.1.28",
-    "@react-navigation/native-stack": "^7.13.0",
-    "axios": "^1.13.5",
     "expo": "~54.0.33",
-    "expo-barcode-scanner": "^13.0.1",
-    "expo-camera": "^17.0.10",
     "expo-status-bar": "~3.0.9",
-    "nativewind": "^4.2.1",
+    "expo-camera": "^16.0.9",
+    "expo-barcode-scanner": "^14.0.6",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.23.0",
-    "react-native-svg": "^15.15.3",
-    "react-native-vision-camera": "^4.7.3",
-    "zustand": "^5.0.11"
+    "react-native-screens": "^4.6.1",
+    "react-native-safe-area-context": "^5.1.1",
+    "react-native-svg": "^15.11.0",
+    "@react-navigation/native": "^7.0.18",
+    "@react-navigation/native-stack": "^7.2.1",
+    "zustand": "^5.0.2",
+    "axios": "^1.7.9",
+    "nativewind": "^4.2.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
-    "autoprefixer": "^10.4.24",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.19",
-    "typescript": "~5.9.2"
+    "typescript": "~5.9.2",
+    "tailwindcss": "^3.4.17",
+    "postcss": "^8.5.1",
+    "autoprefixer": "^10.4.20"
   },
   "private": true
 }
