Fix: Configure NativeWind for React Native Web rendering
- Added nativewind/babel plugin to babel.config.js (critical fix)
- Created global.css with Tailwind directives for web support
- Created metro.config.js with NativeWind configuration
- Created postcss.config.js for Tailwind processing
- Updated App.tsx to import global.css
- Fixes blank page rendering issue on web platform

--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,66 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
+# Environment variables
+.env
+.env.local
+.env.*.local
 
-# dependencies
+# Dependencies
 node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
-# Expo
-.expo/
+# Build outputs
 dist/
-web-build/
-expo-env.d.ts
+build/
+.expo/
+.expo-shared/
+*.jsbundle
+*.bundle
 
-# Native
-.kotlin/
-*.orig.*
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*.swn
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Testing
+coverage/
+.nyc_output/
+
+# Logs
+logs/
+*.log
+
+# Temporary files
+tmp/
+temp/
+
+# React Native
+.gradle
+local.properties
+.classpath
+.project
+.settings/
+.loadpath
+.c9/
+*.launch
+.vscode
+.DS_Store
 *.jks
 *.p8
 *.p12
 *.key
 *.mobileprovision
+*.orig.*
+web-build/
 
-# Metro
-.metro-health-check*
-
-# debug
-npm-debug.*
-yarn-debug.*
-yarn-error.*
-
-# macOS
-.DS_Store
-*.pem
-
-# local env files
-.env
-.env*.local
-
-# typescript
-*.tsbuildinfo
-
-# generated native folders
-/ios
-/android
+# Firebase
+.firebase/
+.firebaserc
