--- a/package.json
+++ b/package.json
@@ -11,27 +11,30 @@
     "test": "jest"
   },
   "dependencies": {
-    "expo": "~54.0.33",
-    "expo-status-bar": "~3.0.9",
-    "expo-camera": "^16.0.9",
-    "expo-barcode-scanner": "^14.0.6",
-    "react": "19.1.0",
-    "react-native": "0.81.5",
-    "react-native-screens": "^4.6.1",
-    "react-native-safe-area-context": "^5.1.1",
-    "react-native-svg": "^15.11.0",
+    "@react-native-camera-roll/camera-roll": "^7.8.0",
     "@react-navigation/native": "^7.0.18",
     "@react-navigation/native-stack": "^7.2.1",
-    "zustand": "^5.0.2",
     "axios": "^1.7.9",
-    "nativewind": "^4.2.0"
+    "babel-preset-expo": "^54.0.10",
+    "expo": "~54.0.33",
+    "expo-camera": "17.0.10",
+    "expo-status-bar": "~3.0.9",
+    "nativewind": "^4.2.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-safe-area-context": "^5.1.1",
+    "react-native-screens": "4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-web": "^0.21.0",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
-    "typescript": "~5.9.2",
-    "tailwindcss": "^3.4.17",
+    "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
-    "autoprefixer": "^10.4.20"
+    "tailwindcss": "^3.4.17",
+    "typescript": "~5.9.2"
   },
   "private": true
 }
