--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-expo": "^54.0.10",
     "expo": "~54.0.33",
     "expo-camera": "17.0.10",
+    "expo-file-system": "^19.0.21",
     "expo-status-bar": "~3.0.9",
     "nativewind": "^4.2.0",
     "react": "19.1.0",
